# rust-text-editor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
app/: Cargo.toml  README.md
app/src/: lib.rs  main.rs
config/: Cargo.toml  README.md
config/src/: lib.rs
config/src/config/: theme.rs
editor/: Cargo.toml  README.md
editor-backup/: Cargo.toml
editor-backup/src/: main.rs
editor/src/: lib.rs  main.rs
editor/src/editor/: blocks.rs  input_handlers.rs  key_functions.rs  tests.rs  unredo_stack.rs
editor/src/editor/blocks/: block.rs  text_block.rs
editor/src/editor/key_functions/: copy_paste.rs  cursor_line.rs  editing_keys.rs  highlight_keys.rs  highlight_selection.rs  navigation_keys.rs  save_key.rs
editor/src/editor/key_functions/highlight_keys/: highlight_subroutines.rs  movement.rs  selection.rs
editor/src/editor/key_functions/highlight_selection/: movement.rs
editor/src/editor/key_functions/navigation_keys/: down_subroutines.rs  left_subroutines.rs  right_subroutines.rs  up_subroutines.rs
editor/src/editor/tests/: benchmark.rs  blocks_tests.rs  key_functions_tests.rs  selection_tests.rs
editor/src/editor/unredo_stack/: stack_choice.rs
editor/test_files/: GRCh38_50_rna.fna  bench_file.txt  ends_with_newline.txt  highlight.txt  highlight_vertical.txt  small_text.txt
editor/test_files/results/: multi_deletion_test_result.txt
stack/: Cargo.toml  README.md
stack/src/: lib.rs
