[workspace]
members = ["editor", "app", "config"]
resolver = "2"

[workspace.package]
version = "0.3.13"
repository = "https://github.com/bons0002/rust-text-editor"
license = "MIT"

[workspace.dependencies]
cli-clipboard = "0.4.0"
crossterm = "0.27"
ratatui = "0.26"
rayon = "1.10"
unicode-segmentation = "1.11"
unicode-width = "0.1.13"