[package]
name = "editor"
version.workspace = true
edition = "2021"

[dependencies]
cli-clipboard = {workspace = true}
crossterm = {workspace = true}
ratatui = {workspace = true}
rayon = {workspace = true}
serial_test = {workspace = true}
unicode-segmentation = {workspace = true}
unicode-width = {workspace = true}
config = { path = "../config" }
stack = { path = "../stack" }